fix all with google beta@1.0.1
